Send welcome email if it is a UM user

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -22,8 +22,8 @@
       = f.label :internal?, "UM User"
       = f.check_box :internal?, { data: { behavior: 'toggle-disable turn-on', 'toggle-disable-target': '.send-welcome *', 'turn-on-target': '#send_welcome' }}
     .form-item.send-welcome
-      = label_tag :send_welcome, "Send welcome email to new user accounts", { class: "disabled" }
-      = check_box_tag :send_welcome, '1', false, { disabled: true }
+      = label_tag :send_welcome, "Send welcome email to new user accounts", { class: "#{"disabled" if !@user.internal?}" }
+      = check_box_tag :send_welcome, '1', @user.internal?, { disabled: !@user.internal? }
 
   - if current_user_is_admin?
     %section
