Clean up some view portions

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -48,9 +48,10 @@
             = f.label :display_name
             = f.text_field :display_name
           = f.hidden_field :internal, value: true
-          .form-item.send-welcome
-            = label_tag :send_welcome, "Send welcome email"
-            = check_box_tag :send_welcome, '1', true
+          - if @user.new_record?
+            .form-item
+              = label_tag :send_welcome, "Send welcome email"
+              = check_box_tag :send_welcome, '1', true
         = render partial: "courses", locals: { form: f }
         = render partial: "course_settings", locals: { form: f }
         = render "buttons"
