--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -3,4 +3,18 @@
 %h3.pagetitle= @title
 
 .pageContent
-  = render 'form'
+  = render partial: 'layouts/alerts', locals: { model: @user, term: "user" }
+
+  #tabs.ui-tabs.ui-widget
+    %ul.ui-tabs-nav{:role => "tablist"}
+      %li
+        %a{ "href" => "#tab1" } New GradeCraft User
+      %li
+        %a{ "href" => "#tab2" } New UM User
+
+    #tabt1.ui-tabs-panel.ui-widget-content{:role => "tabpanel"}
+      #tab1{ class: ("active" unless @user.internal?) }
+        = render partial: "gradecraft_user_form"
+
+      #tab2{ class: ("active" if @user.internal?) }
+        = render partial: "internal_user_form"
