Content area to add new scripts to the end of the javascript area

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,3 +26,4 @@
     = render 'layouts/background'
     = render 'layouts/google_analytics'
     = javascript_include_tag "application", 'data-turbolinks-track' => true
+    = yield(:scripts)
