--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -20,6 +20,9 @@
   &:active
     background-color: $color-green-3
 
+  &.danger
+    background-color: $color-red-3;
+
 .submit-buttons
   margin-top: 1rem
   position: relative
@@ -106,7 +109,7 @@ tbody
   &.flagged
     color: $color-orange-1
 
-.tab-container 
+.tab-container
   .button
     color: $color-grey-5
 
