Have white forecolor for buttons within tab content

--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -17,7 +17,7 @@
   border: 1px solid $color-grey-4
   border-radius: $global-radius
   font-family: "Avenir", Helvetica, sans-serif
-  
+
   .ui-tabs-panel
     padding: .5rem
 
@@ -26,6 +26,9 @@
 
   .team-filter
     margin-top: 1rem
+
+  a
+    color: $color-white
 
 .ui-widget-header
   border: 0
@@ -38,7 +41,7 @@
   li.ui-state-default
     background: $color-green-3 !important
     border: 0
-    a 
+    a
       color: $color-white !important
 
     &:hover
@@ -46,5 +49,5 @@
 
     &.ui-state-active
       background: $color-blue-0 !important
-      a 
+      a
         color: $color-white !important
