Fixed display of error messages on assignment weighting

--- a/app/views/assignment_type_weights/mass_edit.html.haml
+++ b/app/views/assignment_type_weights/mass_edit.html.haml
@@ -21,9 +21,12 @@
             %li Any #{(term_for :assignment_types).downcase} you do not place #{ ( term_for :weights).titleize } on but have grades for will be multiplied by #{current_course.default_assignment_weight}. For example, this would adjust a 1000 point Essay to be worth #{ (1000 * current_course.default_assignment_weight).to_i } points.
 
       = hidden_field_tag :student_id, current_student.id
-      - if @form.errors.key?(:base)
-        = f.error :base
+
       %hr
+      - if @form.errors.has_key?(:base)
+        .alert-box.alert
+          = f.error :base
+
       = f.simple_fields_for :assignment_type_weights do |atwf|
         = atwf.hidden_field :assignment_type_id
         %h4.bold= atwf.object.assignment_type.name
