--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -81,5 +81,6 @@
               %ul.button-bar
                 - if challenge.challenge_grade_for_team(@team).present?
                   %li= link_to raw('<i class="fa fa-edit fa-fw"></i> Edit Grade'), edit_challenge_challenge_grade_path(:challenge_id => challenge, :id => challenge.challenge_grade_for_team(@team).id), :class => 'button'
+                  %li= link_to raw("<i class='fa fa-trash fa-fw'></i><span class='hide-for-small'>Delete Grade</span>"), challenge_challenge_grade_path(challenge.id, challenge.challenge_grade_for_team(@team).id, :team_id => @team.id), :class => 'button', :data => { confirm: 'Are you sure?', method: :delete }
                 - else
                   %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), new_challenge_challenge_grade_path(:challenge_id => challenge, :team_id => @team.id), :class => 'button'
