Coverage for update single challenge grade details

--- a/app/views/students/syllabus/_challenges.haml
+++ b/app/views/students/syllabus/_challenges.haml
@@ -33,9 +33,7 @@
                 .right
                   %ul.button-bar
                     - if challenge.challenge_grade_for_team(current_student.team_for_course(current_course)).present?
-                      %li
-                        %a{:href => edit_challenge_challenge_grade_path(challenge.id, challenge.challenge_grade_for_team(current_student.team), :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
-                          Edit Grade
+                      %li= link_to raw("<i class='fa fa-edit fa-fw'></i><span class='hide-for-small'>Edit Grade</span>"), edit_challenge_challenge_grade_path(challenge.id, challenge.challenge_grade_for_team(current_student.team_for_course(current_course)), :team => current_student.team_for_course(current_course)), :class => 'button'
                     - else
                       %li
                         %a{:href => new_challenge_challenge_grade_path(:challenge_id => challenge.id, :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
