Make the add to course button a secondary button

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -21,7 +21,10 @@
     background-color: $color-green-3
 
   &.danger
-    background-color: $color-red-3;
+    background-color: $color-red-3
+
+  &.secondary
+    background-color: $color-green-3
 
 .submit-buttons
   margin-top: 1rem
