--- a/app/views/challenge_grades/edit_status.html.haml
+++ b/app/views/challenge_grades/edit_status.html.haml
@@ -21,7 +21,11 @@
   = simple_form_for :challenge_grade, :url => update_status_challenge_challenge_grades_path(@challenge), :html => { :method => :put} do |f|
     - for challenge_grade in @challenge_grades
       = hidden_field_tag "challenge_grade_ids[]", challenge_grade.id
-    .right= f.input :status, :label => "Update Status to:", :as => :select, :collection => Grade::STATUSES
+    %br
     %hr
-    .right
-      = f.button :submit, "Update Statuses", :class => "button"
+    .right= f.input :status, :label => "Update Status to:", :as => :select, :collection => Grade::STATUSES
+    .clear
+    %br
+    .right= f.button :submit, "Update Statuses", :class => "button"
+
+    
