--- a/app/views/assignments/edit.html.haml
+++ b/app/views/assignments/edit.html.haml
@@ -5,4 +5,4 @@
 = render partial: "buttons", locals: { presenter: presenter }
 
 .pageContent
-  = render 'form'
+  = render partial: "form", locals: { presenter: presenter }
