Remove remaining reference to the assignment instance variable

--- a/app/views/assignments/edit.html.haml
+++ b/app/views/assignments/edit.html.haml
@@ -1,4 +1,4 @@
-= content_nav_for @assignment, "Edit #{term_for :assignment}"
+= content_nav_for presenter.assignment, "Edit #{term_for :assignment}"
 
 %h3.pagetitle= @title
 
