--- a/app/views/challenges/show.html.haml
+++ b/app/views/challenges/show.html.haml
@@ -78,7 +78,7 @@
 
             - if @challenge.release_necessary?
               %td
-                - if challenge_grade
+                - if challenge_grade.is_graded?
                   .center= check_box_tag "challenge_grade_ids[]", challenge_grade.id
 
     %br
