--- a/app/views/info/_teams_table.haml
+++ b/app/views/info/_teams_table.haml
@@ -1,20 +1,24 @@
-%table.dynatable
+%table.no_features_dynatable
   %thead
     %tr
       %th= course.team_term
-      - if ! current_course.team_score_average
-        %th{ "data-dynatable-sorts" => "numericScore" } Score
-      %th Average #{course.user_term} Grade
+      - if ! current_course.team_score_average && current_course.challenges.present?
+        %th Score
+      %th Average Grade
+      - if current_course.badges.present?
+        %th Badges
       %th= course.team_leader_term
   %tbody
     - teams.order_by_high_score.each do |team|
       %tr
         %td= link_to team.name, team_path(team)
-        - if ! current_course.team_score_average
-          %td= points team.try(:challenge_grade_score)
+        - if ! current_course.team_score_average && current_course.challenges.present?
+          %td= points team.try(:score)
 
         %td= points team.try(:average_points)
+        - if current_course.badges.present?
+          %td= team.badge_count
         %td
-          // If put back in use, change to team.leaders
-          - if team.team_leader.present?
-            = link_to team.team_leader.try(:name), team.team_leader
+          - if team.leaders.present?
+            - team.leaders.each do |team_leader|
+              = link_to team_leader.try(:name), team_leader
