fix color of text in tables

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -11,6 +11,8 @@ table
 
   td
     border-bottom: 1px solid $color-grey-3
+    padding: .5rem
+    color: $color-grey-3 !important
   
   td .center
     text-align: center !important
@@ -27,9 +29,6 @@ table
 
       a, a.active, a.sorted
         color: $color-white !important
-
-  td
-    padding: .5rem
 
 /* Styling pattern tables for assignment outcome overview */
 td.complete, tr.achieved
