--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -27,8 +27,9 @@
   .team-filter
     margin-top: 1rem
 
-  a
-    color: $color-white
+#tabs .ui-widget-content a.button.secondary
+  color: $color-white
+
 
 .ui-widget-header
   border: 0
