--- a/app/views/home/color_theme.html.haml
+++ b/app/views/home/color_theme.html.haml
@@ -15,6 +15,12 @@
       != color_block_set("alt-blue", %w[ 00 0 1 2 3 4 5 ])
 
   .color-group
+    %h4 Purples
+    .color-bar
+      != color_block_set("purple", %w[ 1 2 ])
+
+
+  .color-group
     %h4 Greens
     .color-bar
       != color_block_set("green", %w[ 00 0 1 2 3 4 5 ])
