--- a/app/views/info/_unreleased_grades_table.haml
+++ b/app/views/info/_unreleased_grades_table.haml
@@ -11,7 +11,7 @@
       - else
         = link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), assignment, :class => "button"
 
-    = form_tag edit_status_grades_assignment_path assignment do
+    = form_tag edit_status_grades_assignment_path(assignment), method: :get do
       %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "unreleasedTableCaption"}
         %thead
           %tr
