--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -59,5 +59,5 @@
       .panel
         %h4.bold= "Proposal ##{i}: #{p.title}"
         %h6= "Created: #{p.created_at}"
-        %p= p.proposal
+        %p= raw p.proposal
       - i += 1
