--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -55,7 +55,7 @@
           %td
             .right
               %ul.button-bar
-                %li= link_to raw("<i class='fa fa-check fa-fw'></i> Quick Award"), mass_award_badge_path(badge), :class => "button"
+                %li= link_to raw("<i class='fa fa-check fa-fw'></i> Quick Award"), mass_award_badge_path(badge.id), :class => "button"
                 %li= link_to raw("<i class='fa fa-star fa-fw'></i> Award"), new_badge_earned_badge_path(badge), :class => "button"
                 %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit"), edit_badge_path(badge), :class => 'button'
                 %li= link_to raw("<i class='fa fa-trash fa-fw'></i> Delete"), badge_path(badge),:class => "button", :data => { confirm: 'Are you sure?',  method: :delete }
