--- a/app/views/earned_badges/_form.html.haml
+++ b/app/views/earned_badges/_form.html.haml
@@ -4,6 +4,7 @@
   .italic= "You are awarding the #{@badge.name} #{term_for :badge} to..."
 
   = hidden_field_tag :badge_id, @badge.id
+  = hidden_field_tag :student_visible, true
 
   %section
     = select_tag :student_id, options_from_collection_for_select(current_course.students, "id", "name", @earned_badge.try(:student_id)), :prompt => "Select Student"
