--- a/app/views/earned_badges/mass_edit.html.haml
+++ b/app/views/earned_badges/mass_edit.html.haml
@@ -13,7 +13,7 @@
         = select_tag :team_id, options_for_select(@teams.map { |t| [t.name, t.id] }, @team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
 
   #massGrade
-    = simple_form_for @badge, method: :post, :html => {:class => 'mass-edit-earned-badges' }, :url => mass_earn_badge_path(:badge_id => @badge.id) do |f|
+    = simple_form_for @badge, method: :post, :html => {:class => 'mass-edit-earned-badges' }, :url => mass_earn_badge_path(@badge) do |f|
       %table
         %thead
           %tr
