refactor self log process

--- a/app/views/assignments/_self_log_form.html.haml
+++ b/app/views/assignments/_self_log_form.html.haml
@@ -1,9 +1,7 @@
 = simple_form_for current_student.grade_for_assignment(assignment), :url => self_log_grades_assignment_path(assignment), :method => :post do |f|
-  - present = student.self_reported_done?(assignment)
-  = hidden_field_tag :present, !present
-  - if !present
+  - if ! student.self_reported_done?(assignment)
     - if assignment.has_levels?
       = f.select :raw_score, assignment.assignment_score_levels.map { |l| [l.formatted_name,l.value] }, :prompt => "Select your grade"
+      = f.submit "Submit", :class => "button success"
     - else
-      = f.select :raw_score, [["I have completed this work", assignment.point_total]], :prompt => "Select your grade"
-    = f.submit "Submit", :class => "button #{present ? 'alert' : 'success'}"
+      = f.submit "I have completed this #{term_for :assignment}", :class => "button success"
