--- a/app/views/info/ungraded_submissions.html.haml
+++ b/app/views/info/ungraded_submissions.html.haml
@@ -10,12 +10,12 @@
   %br
 
   %br
-  
+
   %table.nofeatures_default_due_date_dynatable{"aria-describedby" => "ungradedTableCaption"}
     %thead
       %tr
         %th{:scope => "col", :width => "10%"} Assignment
-        %th{:scope => "col", :width => "7%", :colspan => 2} Name
+        %th{:scope => "col", :width => "7%"} Name
         %th{"data-dynatable-sorts" => "dueDate"} Date Submitted
         %th Comment
         - if current_course.has_teams?
@@ -26,26 +26,23 @@
       - @ungraded_submissions.each do |submission|
         %tr
           %td= link_to submission.assignment.name, submission.assignment
-          - if submission.assignment.is_individual?
-            %td= link_to submission.student.try(:first_name), student_path(submission.student)
-            %td= link_to submission.student.try(:last_name), student_path(submission.student)
-          - elsif submission.assignment.has_groups?
-            %td= link_to submission.group.try(:name), group_path(submission.group)
-            %td
+          %td
+            - if submission.assignment.is_individual?
+              = link_to submission.student.try(:name), student_path(submission.student)
+            - elsif submission.assignment.has_groups?
+              = link_to submission.group.try(:name), group_path(submission.group)
           %td= submission.updated_at
           %td= raw submission.text_comment
-          %td
-            - if current_course.has_teams? && submission.assignment.is_individual? && submission.student.present? && submission.student.team_for_course(current_course).present?
-              = link_to submission.student.team_for_course(current_course).try(:name), submission.student.team_for_course(current_course)
-          - if submission.assignment.is_individual?
+          - if current_course.has_teams?
             %td
-              .right
-                %ul.button-bar
+              - if current_course.has_teams? && submission.assignment.is_individual? && submission.student.present? && submission.student.team_for_course(current_course).present?
+                = link_to submission.student.team_for_course(current_course).try(:name), submission.student.team_for_course(current_course)
+          %td
+            .right
+              %ul.button-bar
+                - if submission.assignment.is_individual?
                   %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"),assignment_submission_path(submission.assignment, :id => submission.id), :class => "button"
                   %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), edit_assignment_grade_path(:assignment_id => submission.assignment.id, :student_id => submission.student.try(:id)), :class => "button"
-          - else
-            %td
-              .right
-                %ul.button-bar
+                - else
                   %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"),assignment_submission_path(submission.assignment, :id => submission.id), :class => "button"
                   %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), group_grade_assignment_path(submission.assignment, :group_id => submission.group), :class => "button"
