--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -2,16 +2,7 @@
 
 %h3.pagetitle= @title
 
-.context_menu
-  %ul
-    %li
-      %a{:href => new_team_path }
-        %i.fa.fa-plus
-        New #{(term_for :team).titleize}
-    %li
-      %a{:href => edit_team_path(@team) }
-        %i.fa.fa-edit
-        Edit #{(term_for :team).titleize}
+= render "buttons"
 
 .pageContent
   = render 'layouts/alerts'
