Use the submission presenter with the edit action

--- a/app/views/submissions/edit.html.haml
+++ b/app/views/submissions/edit.html.haml
@@ -4,11 +4,11 @@
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   - if @assignment.has_groups?
     - if current_user_is_student?
       %h4= "You are editing the assignment submission for Group #{current_student.group_for_assignment(@assignment).name }"
     - else
-      %h4= "You are editing the assignment submission for Group #{@submission.group.name }"
+      %h4= "You are editing the assignment submission for Group #{presenter.submission.group.name }"
 
   = render 'form'
