--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -2,6 +2,8 @@
 
 %h3.pagetitle= @title
 
+= render "buttons"
+
 .pageContent
   = render partial: 'layouts/alerts', locals: { model: @user, term: "user" }
   - if @user.internal?
