--- a/app/views/users/_internal_user_form.html.haml
+++ b/app/views/users/_internal_user_form.html.haml
@@ -19,4 +19,4 @@
         = label_tag :send_welcome, "Send welcome email"
         = check_box_tag :send_welcome, '1', true
   = render partial: "courses", locals: { form: f }
-  = render "buttons"
+  = render "submit_buttons"
