styling non-link menu items

--- a/app/assets/stylesheets/_context_menu.sass
+++ b/app/assets/stylesheets/_context_menu.sass
@@ -17,13 +17,14 @@
       line-height: 2rem
       text-transform: capitalize
       display: block
+      padding: 0rem .25rem
       font-size: .8rem
       float: left
+      border-left: 1px solid $color-green-3
       border-radius: 0 !important
-      & > a 
+      & > a
         color: $color-white
-        padding: .5rem
-        border-left: 1px solid $color-green-3
+        padding: 0 .5rem
       & a:hover
         background-color: $color-green-0
-        padding: .5rem !important
+        display: block
