--- a/app/views/submissions/edit.html.haml
+++ b/app/views/submissions/edit.html.haml
@@ -1,13 +1,13 @@
-= content_nav_for @assignment, "Edit Submission"
+= content_nav_for presenter.assignment, "Edit Submission"
 
 %h3.pagetitle= @title
 
 .pageContent
   = render 'layouts/alerts'
 
-  - if @assignment.has_groups?
+  - if presenter.assignment.has_groups?
     - if current_user_is_student?
-      %h4= "You are editing the assignment submission for Group #{current_student.group_for_assignment(@assignment).name }"
+      %h4= "You are editing the assignment submission for Group #{current_student.group_for_assignment(presenter.assignment).name }"
     - else
       %h4= "You are editing the assignment submission for Group #{presenter.submission.group.name }"
 
