Pass in the assignment via a local for the assignment guidelines

--- a/app/views/grades/edit.html.haml
+++ b/app/views/grades/edit.html.haml
@@ -4,8 +4,8 @@
 
 .pageContent
   = render 'layouts/alerts'
-  
-  = render 'submissions/assignment_guidelines'
+
+  = render partial: 'submissions/assignment_guidelines', locals: { assignment: @assignment }
 
   - if @rubric && @rubric.designed? and @assignment.use_rubric
     = render "rubric_edit"
