Move title for the edit action to the edit submission presenter

--- a/app/views/submissions/edit.html.haml
+++ b/app/views/submissions/edit.html.haml
@@ -1,6 +1,6 @@
 = content_nav_for presenter.assignment, "Edit Submission"
 
-%h3.pagetitle= @title
+%h3.pagetitle= presenter.title
 
 .pageContent
   = render 'layouts/alerts'
