Pass the partial to the form

--- a/app/views/submissions/new.html.haml
+++ b/app/views/submissions/new.html.haml
@@ -6,4 +6,4 @@
   = render 'layouts/alerts'
 
   - if presenter.assignment.accepts_submissions?
-    = render 'form'
+    = render partial: 'form', locals: { presenter: presenter }
